# dolores-bittensor-subnet

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: solver_panel.calibrate.yaml  testnet.json
deploy/systemd/: dolores-miner-chain-neutral-rehearsal.conf  dolores-miner.service  dolores-validator-chain-neutral-rehearsal.conf  dolores-validator.service  dolores-validator.timer
docs/: architecture.md  cohort-release-checklist.md  demo.md  external-miner-evidence-template.md  hackerquest-miner-quickstart.md  release-manifest-0.2.0rc1.md  release-manifest-0.2.0rc2.md  roadmap.md  security-disclosure-packet.md  testnet-status.md  validator-configuration-packet.md  validator-operations.md  vps-rehearsal.md
docs/diary/: 2026-07-07-h2-wallets.md  (+12 more)
neurons/: miner.py  validator.py
scripts/: build_release_bundle.py  local_epoch.py  local_loop.py  normalize_sdist.py  preflight.py  prepare_mutation_task.py  report.py  seed_adversarial.py  testnet_status.py  validate_task.py
tests/: test_archive_atomic.py  test_atomic.py  test_bittensor_default_verify.py  test_bridge_mock.py  test_chain_atomic_endpoints.py  test_chain_client.py  test_cohort_docs.py  test_config.py  test_discovery.py  test_endpoint_policy.py  test_epoch_atomic.py  test_epoch_offline.py  test_gates.py  test_holdout.py  test_holdout_docker.py  test_import_discipline.py  test_miner_auth_policy.py  test_miner_boundary.py  test_miner_cli.py  test_mutation_tools.py  test_normalize_sdist.py  test_packaging.py  test_panel_calibration.py  test_panel_scoring.py  test_preflight_target.py  test_protocol.py  test_recurring_process_restart.py  test_release_bundle_builder.py  test_release_packaging.py  test_scoring_weights.py  test_supervisor_units.py  test_testnet_status.py  test_validator_cli.py  test_validator_state.py  test_wire.py  test_wire_auth.py  test_wire_http_smoke.py  test_wire_transport_cap.py
(+66 files in other folders)
