[project]
name = "dolores-bittensor-subnet"
version = "0.1.0"
description = "Bittensor testnet subnet scaffold for Dolores Autocurricula task supply."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "bittensor>=10.5,<11",
    "pydantic>=2.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
